<resources>
    <string name="app_name">BilVend</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="register">Sign Up</string>
    <string name="signup">Sign up now!</string>
    <string name="noAccount">No account?</string>
    <string name="email">E-mail</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="password">Password</string>
    <string name="repassword">Re-enter password</string>
    <string name="passwordsdontmatch">Passwords don\'t match</string>
    <string name="createAcc">Create Account</string>
    <string name="title_activity_main_page">mainPage</string>
    <string name="BilVend">BilVend</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="noRegistration">Continue without registration*</string>
    <string name="noRegistration_explanation">This will limit some of application features</string>
    <string name="action_settings">Settings</string>
    <string name="search">Search</string>
    <string name="inbox">Inbox</string>
    <string name="favorites">Favorites</string>
    <string name="categories">Categories</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log out</string>
    <string name="sign_up">Sign up</string>
    <string name="profile">My Profile</string>
    <string name="prompt_msg">Type your message &#8230;</string>
    <string name="action_send">Send</string>
    <string name="send_button">send Button</string>
    <string name="sample_message">Hello!</string>
    <string name="logo">logo</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">bbilvend@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_ad_page">adPage</string>
    <string name="title_activity_ad_publishing_page">adPublishingPage</string>
    <string name="finish_publishing">Finish Publishing</string>
    <string name="category">Category</string>
    <string name="choose_category">Choose category</string>
    <string name="title_activity_edit_profile">EditProfileActivity</string>
    <string name="edit_name">Please type in your name</string>
    <string name="edit_surname">Please type in your surname</string>
    <string name="name_of_the_item">Name of the item</string>
    <string name="price_of_the_item">Price of the item</string>
    <string name="content_description">Content description</string>
    <string name="photo_of_item">Photo of item</string>
    <string name="title">Title:</string>
    <string name="price">Price:</string>
    <string name="description">Description:</string>
    <string name="publisher">Publisher</string>
    <string name="upload_date">Upload Date</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_categories">Categories</string>
    <string name="contact">Contact</string>
    <string name="my_posts">My Posts</string>
    <string name="ID">ID</string>
    <string name="remember_me">Remember me</string>
    <string name="or">OR</string>
    <string name="title_activity_my_ad_page">MyAdPage</string>
    <string name="enter_new_title">Enter new title</string>
    <string name="enter_new_price">Enter new price</string>
    <string name="enter_new_description">Enter new description</string>
    <string name="write_your_number">Write your number</string>
    <string name="send">Send</string>
    <string name="to">To:</string>
    <string name="subject">Subject:</string>
    <string name="title_activity_my_posts_ad_page">MyPostsAdPage</string>
    <string name="please_write_email_that_you_registered_with">Please write email that you are registered with</string>
    <string name="reset_password">Reset password</string>
    <string name="google_android_map_api_key"> Map API key </string>
</resources>
