<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/favorites"
        android:icon="@drawable/ic_action_favorites"
        android:title="@string/favorites" />
    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_action_user"
        android:title="@string/profile" />
    <item
        android:id="@+id/myPosts"
        android:title="@string/my_posts"
        android:icon="@drawable/ic_action_my_posts"/>
    <item
        android:id="@+id/categories"
        android:icon="@drawable/ic_action_categories"
        android:title="@string/categories" />
    <item
        android:id="@+id/login"
        android:title="@string/login"
        android:icon="@drawable/ic_action_login"/>
</menu>