<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    app:layout_constraintCircleRadius="10dp">

    <EditText
        android:id="@+id/edit_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:hint="@string/enter_new_title"
        android:inputType="text" />

    <EditText
        android:id="@+id/edit_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_title"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif"
        android:hint="@string/enter_new_price"
        android:inputType="number" />

    <EditText
        android:id="@+id/edic_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_price"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/enter_new_description"
        android:inputType="text" />
</RelativeLayout>